# django-sqs-extended-client

./: .gitignore  LICENSE  README.rst  requirements.txt  setup.cfg
django_sqs_extended_client/: apps.py  process_event.py
django_sqs_extended_client/aws/: sns_client_extended.py
django_sqs_extended_client/event/: event_base.py  event_base_aws.py  event_base_aws_fifo.py  event_dispatcher.py  event_dispatcher_fifo.py
django_sqs_extended_client/event_processor/: event_processor.py
django_sqs_extended_client/management/commands/: clean_s3_queues.py  process_queue.py
django_sqs_extended_client/queue/: common.py
