[metadata]
name = django-sqs-extended-client
version = 0.3.2
description = A Django app to easily use AWS Simple Queue Service (SQS) with S3 for messages up to 2 GB.
long_description = file: README.rst
url = https://github.com/pytech-ai/django-sqs-extended-client
author = Tommaso Castellani
author_email = tom@pytech.ai
license = MIT License
classifiers =
    Environment :: Other Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = true
packages = find:
install_requires =
    django==3.1.5
    boto3==1.16.56